--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "cygnus-react-template",
+	"name": "@cygnus-uy/cygnus",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -42,5 +42,8 @@
 		"eslint-config-prettier": "^8.5.0",
 		"prettier": "^2.6.2",
 		"rewire": "^6.0.0"
-	}
+	},
+	"workspaces": [
+		"packages\\paginator"
+	]
 }
